# pls

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  cert.pem  release.toml
.github/workflows/: ci.yml  release.yml
certs/: chain.pem  indented.pem
certs-cli/: Cargo.toml
certs-cli/src/: context.rs  lib.rs
certs-cli/src/args/: mod.rs  parse.rs  scan.rs
certs-display/: CLAUDE.md  Cargo.toml  README.md
certs-display/src/: lib.rs
certs-display/src/impls/: cert.rs  cert_enums.rs  digests.rs  expiry.rs  id.rs  issuer.rs  mod.rs  public_key.rs  sans.rs  signature.rs  subject.rs  util.rs
certs-display/src/impls/snapshots/: certs_display__impls__cert__tests__cert_view.snap  certs_display__impls__issuer__tests__issuer_view.snap  certs_display__impls__sans__tests__sans_view.snap  certs_display__impls__subject__tests__subject_view.snap
certs-parser/: Cargo.toml
certs-parser/src/: lexer.rs  lib.rs
certs-scan-index/: Cargo.toml
certs-scan-index/src/: lib.rs
certs-scanner/: Cargo.toml
certs-scanner/src/: lib.rs
certs-settings/: Cargo.toml
certs-settings/src/: lib.rs
certs-types/: Cargo.toml
certs-types/src/: cert.rs  expiry.rs  id.rs  issuer.rs  key.rs  lib.rs  nid.rs  output.rs  sans.rs  signature.rs  subject.rs  util.rs
certs-types/src/snapshots/: certs_types__cert__tests__extract_cert.snap  certs_types__expiry__tests__extract_expiry.snap  certs_types__id__tests__extract_aki.snap  certs_types__id__tests__extract_fingerprints.snap  certs_types__id__tests__extract_serial_number.snap  certs_types__id__tests__extract_ski.snap  certs_types__key__tests__extract_e25519_private_key.snap  certs_types__key__tests__extract_extended_key_usage.snap  certs_types__key__tests__extract_public_key.snap  certs_types__signature__tests__extract_signature.snap  certs_types__subject__tests__extract_subject.snap  pls_types__cert__tests__extract_cert.snap  pls_types__cert__tests__extract_cert.snap.new  pls_types__expiry__tests__extract_expiry.snap  pls_types__id__tests__extract_digests.snap  pls_types__id__tests__extract_fingerprints.snap  pls_types__id__tests__extract_serial_number.snap  pls_types__id__tests__extract_ski.snap  pls_types__issuer__tests__extract_issuer.snap  pls_types__key__tests__extract_extended_key_usage.snap.new  pls_types__key__tests__extract_key_usage.snap  pls_types__key__tests__extract_public_key.snap  pls_types__sans__tests__extract_sans.snap  pls_types__signature__tests__extract_signature.snap
lsp/: README.md  esbuild.js  package.json  pnpm-lock.yaml
lsp/client/src/: extension.ts
pls-cert-index/: Cargo.toml
pls-cert-index/src/: lib.rs
pls-cli/: Cargo.toml
pls-cli/src/: context.rs  lib.rs
pls-cli/src/args/: scan.rs
pls-parser/: Cargo.toml
pls-parser/src/: lexer.rs  lib.rs
pls-scanner/: Cargo.toml
pls-scanner/src/: lib.rs
pls-settings/: Cargo.toml
pls-settings/src/: lib.rs
pls-types/: Cargo.toml
pls-types/src/: cert.rs  csr.rs  expiry.rs  id.rs  issuer.rs  key.rs  lib.rs  signature.rs  subject.rs  util.rs
pls-types/src/snapshots/: pls_types__cert__tests__extract_cert.snap  pls_types__cert__tests__extract_cert.snap.new  pls_types__expiry__tests__extract_expiry.snap  pls_types__id__tests__extract_aki.snap  pls_types__id__tests__extract_digests.snap  pls_types__id__tests__extract_digests.snap.new  pls_types__id__tests__extract_fingerprints.snap  pls_types__id__tests__extract_serial_number.snap  pls_types__id__tests__extract_ski.snap  pls_types__issuer__tests__extract_issuer.snap  pls_types__key__tests__extract_e25519_private_key.snap  pls_types__key__tests__extract_extended_key_usage.snap.new  pls_types__key__tests__extract_key_usage.snap  pls_types__key__tests__extract_public_key.snap  pls_types__key__tests__extract_public_key.snap.new  pls_types__sans__tests__extract_sans.snap  pls_types__signature__tests__extract_signature.snap  pls_types__subject__tests__extract_subject.snap
simple-progress/: Cargo.toml
simple-progress/examples/: simple.rs
simple-progress/src/: lib.rs
src/: args.rs  connection.rs  lib.rs  simple_cert.rs  theme.rs  x509.rs  x509_parser.rs
src/args/: connect.rs  mod.rs  parse.rs
src/commands/: connect.rs  lsp.rs  mod.rs  parse.rs
src/commands/connect/: mod.rs  quic.rs  tcp.rs
src/components/: connection.rs  csr.rs  mod.rs  private_key.rs  public_key.rs  x509.rs
src/pem/: mod.rs  parser.rs
src/x509/: cert.rs  mod.rs  parser.rs
test-data/certs/: cloudflare.com.pem  letsencrypt.org.pem  pems.json
test-data/csr/: test.csr  wikipedia-csr.pem
test-data/private-keys/: begin-rsa-private-key.pem  wikipedia-begin-private-key.pem
test-data/public-keys/: openssl-wiki-rsa.pem
