[workspace]
members = [
    "certs-cli",
    "certs-display",
    "certs-parser",
    "certs-scanner",
    "certs-scan-index",
    "certs-settings",
    "certs-types",
    "simple-progress",
]
resolver = "3"

[workspace.dependencies]
# workspace dependencies
certs-display = { path = "certs-display" }
certs-parser = { path = "certs-parser" }
certs-scanner = { path = "certs-scanner" }
certs-settings = { path = "certs-settings" }
certs-types = { path = "certs-types" }
certs-scan-index = { path = "certs-scan-index" }
simple-progress = { path = "simple-progress" }

# external dependencies
anyhow = "1"
base64 = "0.22"
bon = "3"
boring = { git = "https://github.com/fisherdarling/boring", rev = "0bc15c8cff144aba136cce8741ea74c2cb5dc696", features = [
    "rpk",
    "pq-experimental",
    "kx-safe-default",
    "kx-client-pq-supported",
] }
boring-sys = { git = "https://github.com/fisherdarling/boring", rev = "0bc15c8cff144aba136cce8741ea74c2cb5dc696", features = [
    "rpk",
    "pq-experimental",
] }
iocraft = "0.7"
tokio-boring = { git = "https://github.com/fisherdarling/boring", rev = "0bc15c8cff144aba136cce8741ea74c2cb5dc696" }
bytes = "1.10"
clap = { version = "4.5.37", features = ["derive"] }
clap-verbosity-flag = { version = "3.0.2", features = ["tracing"] }
color-eyre = "0.6.3"
foundations = { version = "4.5", default-features = false }
gxhash = "3.5.0"
globset = "0.4.0"
escape8259 = "0.5.3"
ignore = { version = "0.4.23", features = ["simd-accel"] }
insta = "1.43"
memmap2 = "0.9.5"
jiff = { version = "0.2.13", features = ["serde"] }
regex = { version = "1" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
kanal = "0.1.0"

[profile.release]
debug = true
