[package]
name = "certs-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "certs"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
foundations = { workspace = true }
certs-display = { workspace = true }
certs-types = { path = "../certs-types" }
certs-settings = { path = "../certs-settings" }
certs-parser = { path = "../certs-parser" }
certs-scanner = { path = "../certs-scanner" }
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
jiff = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["json"] }
kanal = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
simple-progress = { workspace = true }
