[package]
name = "certs-display"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
boring = { workspace = true }
bytes = { workspace = true }
certs-types = { workspace = true }
iocraft = { workspace = true }
jiff = { workspace = true }
serde_json = { workspace = true }
