[package]
name = "pls-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "certs"
path = "src/bin/main.rs"

[dependencies]
anyhow = { workspace = true }
foundations = { workspace = true }
pls-types = { path = "../pls-types" }
pls-settings = { path = "../pls-settings" }
pls-parser = { path = "../pls-parser" }
pls-scanner = { path = "../pls-scanner" }
pls-cert-index = { path = "../pls-cert-index" }
clap = { workspace = true, features = ["derive"] }
clap-verbosity-flag = { workspace = true, features = ["tracing"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
kanal = { workspace = true }
simple-progress = { workspace = true }
