[package]
name = "pls-parser"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pls-parser"
path = "bin/main.rs"

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
boring = { workspace = true }
bytes = { workspace = true }
regex = { version = "1", default-features = false, features = ["std", "perf"] }
pls-types = { path = "../pls-types" }
